<resources>
    <string name="app_name">GR Group</string>


    <style name="text_input_style_login" parent="Theme.AppCompat.Light.NoActionBar">
        <!-- Customize your theme here. -->
        <item name="colorPrimary">@color/colorPrimary</item>
        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
        <item name="colorAccent">@color/react_gray</item>

    </style>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="square_meter">Square Meter %s</string>
    <string name="loading">loading</string>
    <string name="no_plots_found">No Plots found</string>
    <string name="version">version</string>
    <string name="enter_your_password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="layouts">Layouts</string>
    <string name="dashboard">Dashboard</string>
    <string name="server_is_currently_unavailible_n_or_internet_access_is_denied">Server is currently unavailible \n or \nInternet access is denied</string>
    <string name="serverdown">ServerDown</string>
    <string name="try_again">Try Again</string>
    <string name="no_data_found">No data found</string>
    <string name="letters_numbers_no_space">QWERTYUIOPASDFGHJKLZXCVBNMqwertyuiopasdfghjklzxcvbnm0123456789</string>
    <string name="save">Save</string>
    <string name="letters_numbers">QWERTYUIOPASDFGHJKLZXCVBNM qwertyuiopasdfghjklzxcvbnm</string>
    <string name="surname">Surname*</string>
    <string name="mobile_no">Mobile No.*</string>
    <string name="pan_no">PAN No.</string>
    <string name="name">Name*</string>
    <string name="default_error_msg">Unknown error</string>
    <string name="lbl_set_profile_photo">Follow Up image</string>
    <string name="lbl_take_camera_picture">Take a picture</string>
    <string name="lbl_choose_from_gallery">Choose from gallery</string>
    <string name="toast_image_intent_null">Image picker option is missing!</string>

    <string name="dialog_permission_title">Grant Permissions</string>
    <string name="dialog_permission_message">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="go_to_settings">GOTO SETTINGS</string>
    <string name="ic_photo">&#xe111;</string>
    <string name="select_date">Select Date*</string>
    <string name="leading_real_estate_company_in_hyderabad">Leading Real estate company in Hyderabad</string>

    <string-array name="amount_arrays">
<!--        <item> Select Title</item>-->

        <item>Mr</item>
        <item>Mrs</item>
        <item>Ms</item>

        <item>Dr</item>
        <item>Master</item>

        <item>Prof</item>



    </string-array>

</resources>