<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:id="@+id/error_layout"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_height="match_parent">
        <ImageView
            android:contentDescription="@string/serverdown"
            android:layout_width="100dp"
            android:src="@drawable/serverdown"
            android:layout_margin="15dp"
            android:layout_height="100dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="13sp"
            android:text="@string/server_is_currently_unavailible_n_or_internet_access_is_denied"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="29dp"
            android:id="@+id/error_server_down"
            android:textAllCaps="false"
            android:elevation="3dp"
            android:layout_margin="10dp"
            android:textColor="@color/black"
            android:background="@drawable/error_button"
            android:text="@string/try_again"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>