<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="fragment"
            type="com.grgroup.hexabuild.newreferal.NewReferral" />

        <variable
            name="model"
            type="com.grgroup.hexabuild.newreferal.NewReferralRequest" />

        <variable
            name="model2"
            type="com.grgroup.hexabuild.newreferal.TitlesResponse" />

    </data>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            android:requiresFadingEdge="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_70sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    app:cardCornerRadius="@dimen/_5sdp"
                    app:cardElevation="@dimen/_5sdp">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:layout_marginBottom="@dimen/_25sdp"
                        android:orientation="vertical"
                        tools:context=".login.LoginFragment">

                        <androidx.appcompat.widget.AppCompatSpinner
                            android:id="@+id/titlespinner"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_12sdp"
                            android:layout_marginEnd="@dimen/_12sdp"
                            android:spinnerMode="dropdown"

                            android:tooltipText="Title"/>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="0.5dp"
                            android:layout_marginStart="@dimen/_12sdp"
                            android:layout_marginEnd="@dimen/_12sdp"
                            android:layout_marginBottom="@dimen/_5sdp"
                            android:background="@color/black" />


                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/textInputLayout"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_8sdp"

                            android:layout_marginStart="@dimen/_12sdp"
                            android:layout_marginEnd="@dimen/_12sdp">


                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/usernameEditText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/name"

                                android:digits="@string/letters_numbers"
                                android:inputType="textPersonName"
                                android:singleLine="true"
                                android:text="@={model.pName}" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/surtextInputLayout"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_12sdp"
                            android:layout_marginTop="@dimen/_8sdp"

                            android:layout_marginEnd="@dimen/_12sdp">


                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/surnameEditText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/surname"
                                android:digits="@string/letters_numbers"

                                android:inputType="textPersonName"

                                android:singleLine="true"
                                android:text="@={model.PSurName}" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/mobileInputLayout"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_12sdp"
                            android:layout_marginTop="@dimen/_8sdp"
                            android:layout_marginEnd="@dimen/_12sdp">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/mobileEditText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/mobile_no"
                                android:digits="0123456789"
                                android:inputType="phone"

                                android:maxLength="10"
                                android:text="@={model.PBusinessEntitycontactNo}" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/aadharInputLayout"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:visibility="gone"
                            android:layout_marginStart="@dimen/_12sdp"
                            android:layout_marginTop="@dimen/_8sdp"
                            android:layout_marginEnd="@dimen/_12sdp">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/aadharEditText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="Aadhar No."
                                android:inputType="number"
                                android:maxLength="12" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/panInputLayout"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_12sdp"
                            android:layout_marginTop="@dimen/_8sdp"
                            android:layout_marginEnd="@dimen/_12sdp">

                            <com.google.android.material.textfield.TextInputEditText

                                android:id="@+id/panEditText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:digits="@string/letters_numbers_no_space"
                                android:hint="@string/pan_no"

                                android:maxLength="10" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="@dimen/_150sdp"
                            android:layout_height="@dimen/_150sdp"
                            android:layout_gravity="center"
                            android:layout_marginTop="16dp"
                            android:layout_marginEnd="8dp"
                            android:id="@+id/profie_pic"

                            app:srcCompat="@drawable/ic_baseline_perm_identity_24" />


                        <Button
                            android:id="@+id/save"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_45sdp"
                            android:layout_marginStart="@dimen/_12sdp"
                            android:layout_marginTop="@dimen/_18sdp"
                            android:layout_marginEnd="@dimen/_12sdp"
                            android:backgroundTint="@color/button"
                            android:onClick="@{(view)->fragment.saveData(view)}"
                            android:text="@string/save"
                            android:fontFamily="@font/raleway_bold"
                            android:textColor="@color/white" />


                      <androidx.appcompat.widget.AppCompatTextView
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:text="Leader"

                          android:textSize="@dimen/_15sdp"
                          android:layout_marginStart="@dimen/_12sdp"
                          android:layout_marginTop="@dimen/_18sdp"
                          android:layout_marginEnd="@dimen/_12sdp"/>

                          <androidx.recyclerview.widget.RecyclerView
                              android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:textSize="@dimen/_15sdp"
                              android:layout_marginStart="@dimen/_12sdp"
                              android:layout_marginTop="@dimen/_18sdp"
                              android:layout_marginEnd="@dimen/_12sdp"
                              />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>


            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

        </RelativeLayout>
</layout>