<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="model"
            type="com.grgroup.hexabuild.login.LoginFragment" />

    </data>

    <!--    <RelativeLayout-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        >-->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:requiresFadingEdge="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"

            >

            <androidx.cardview.widget.CardView
                android:id="@+id/card_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_70sdp"
                app:cardCornerRadius="@dimen/_5sdp"
                app:cardElevation="@dimen/_5sdp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:layout_marginBottom="@dimen/_25sdp"
                    android:orientation="vertical"

                    tools:context=".login.LoginFragment">

                    <TextView
                        android:id="@+id/login_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="24dp"
                        android:fontFamily="@font/raleway_semibold"
                        android:text="Login"
                        android:textColor="@color/app_color"
                        android:textSize="@dimen/_28sdp" />


                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/imageView"
                        android:layout_width="@dimen/_130sdp"
                        android:layout_height="@dimen/_130sdp"
                        android:layout_marginTop="@dimen/_12sdp"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/_16sdp"
                        android:layout_marginEnd="@dimen/_16sdp"

                        app:srcCompat="@drawable/client_croplogo" />


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputLayout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_12sdp"
                        android:layout_marginEnd="@dimen/_12sdp">


                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/usernameEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="Username"
                            android:inputType="textEmailAddress"
                            android:singleLine="true"
                           />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputLayout2"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_12sdp"
                        android:layout_marginTop="@dimen/_8sdp"

                        android:layout_marginEnd="@dimen/_12sdp"
                        app:endIconMode="password_toggle">

                        <com.google.android.material.textfield.TextInputEditText

                            android:id="@+id/passwordEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/enter_your_password"
                            android:inputType="textPassword"
                           />
                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/signUpButton"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_45sdp"
                        android:layout_marginStart="@dimen/_12sdp"
                        android:layout_marginTop="@dimen/_12sdp"
                        android:layout_marginEnd="@dimen/_12sdp"
                        android:backgroundTint="@color/button"
                        android:onClick="@{(view)->model.validateLogin(view)}"
                        android:text="@string/sign_in"
                        android:fontFamily="@font/raleway_bold"
                        android:textColor="@color/white"

                        />


                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                >


                <TextView
                    android:id="@+id/version"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_30sdp"
                    android:gravity="end"
                    android:text="@string/version"
                    android:layout_marginBottom="@dimen/_20sdp"
                    android:textAllCaps="false"
                    android:textColor="@color/app_color"
                    android:textSize="@dimen/_10sdp" />
                <androidx.appcompat.widget.AppCompatImageView

                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginEnd="@dimen/_30sdp"
                    android:layout_marginBottom="@dimen/_20sdp"
                    android:background="@drawable/kapilit_logo" />


            </RelativeLayout>

        </LinearLayout>

    </ScrollView>


    <!--    </RelativeLayout>-->
</layout>